--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@ body {
   sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color:rgb(45, 45, 76);
+  background-color:#2b2d33;
 }
 
 code {
